darkmatter/lib/tests/snapshots/layout_matrix__YamlBlock__width_40.snap
---
source: darkmatter/lib/tests/layout_matrix.rs
expression: block
---
BESPOKE
                                   yaml 

 name: rusty-biscuit
 version: 0.1.0
 tags:
   - cli
   - terminal
---
TREE
```yaml
    name: rusty-biscuit
    version: 0.1.0
    tags:
      - cli
      - terminal
