darkmatter/lib/tests/snapshots/layout_matrix__YamlBlock__word_wrap_prose.snap
---
source: darkmatter/lib/tests/layout_matrix.rs
expression: block
---
BESPOKE
                                                                           yaml 
 name: rusty-biscuit
 version: 0.1.0
 tags:
   - cli
   - terminal
---
TREE
```yaml
    name: rusty-biscuit
    version: 0.1.0
    tags:
      - cli
      - terminal
